--- a/puppies_style.css
+++ b/puppies_style.css
@@ -99,8 +99,10 @@ h2 {
     font-size: 1.5em;
 }
 
-p {
-  color: white;
+#parents {
+    color: white;
+    text-align: center;
+    font-size: 1em;
 }
 
 img{
